Fixing the styling on the home screen. Now that the TK background text is gone, I've moved the text up to accomodate the extra space. Also, I changed the line height of home__text--5 form 3.5 to 3 rem.

--- a/frontend/src/App/styles/base/_typography.scss
+++ b/frontend/src/App/styles/base/_typography.scss
@@ -137,7 +137,7 @@
 
     &--5 {
       color: $grey-5;
-      z-index: 999999;
+      line-height: 3rem;
     }
 
     &--im {
