--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -51,8 +51,7 @@
         &--left {
 			@include flexCenterCenter($flex-direction: column, $align-items: flex-start);
 			position: absolute;
-            top: 43%;
-            // top: 35rem;
+            top: 35%;
         }
 
         &--right {
